--- a/src/HomematicIp/HomematicIp.csproj
+++ b/src/HomematicIp/HomematicIp.csproj
@@ -17,7 +17,8 @@
     <PackageIconUrl>https://upload.wikimedia.org/wikipedia/commons/e/ed/Skycoin_Cloud_Logo_Blue.png</PackageIconUrl>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
-    <Version>1.0.5</Version>
+    <Version>1.0.7</Version>
+    <PackageReleaseNotes>Adding ExtendedLinkedSwitchingGroup</PackageReleaseNotes>
   </PropertyGroup>
 
   <ItemGroup>
