src/HomematicIp/Data/.DS_Store

--- a/.gitignore
+++ b/.gitignore
@@ -342,3 +342,4 @@ healthchecksdb
 
 # Backup folder for Package Reference Convert tool in Visual Studio 2017
 MigrationBackup/
+src/HomematicIp/Data/.DS_Store
