implement RuleMetaDatas and the possibility to set the enables state of a simple rule

--- a/src/HomematicIp/HomematicIp.csproj
+++ b/src/HomematicIp/HomematicIp.csproj
@@ -35,4 +35,7 @@ Making more properties nullable</PackageReleaseNotes>
     <PackageReference Include="System.Reactive" Version="4.1.5" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Data\HomematicIpObjects\Rules\" />
+  </ItemGroup>
 </Project>
