<TreatWarningsAsErrors>false</TreatWarningsAsErrors>

--- a/src/HomematicIp/HomematicIp.csproj
+++ b/src/HomematicIp/HomematicIp.csproj
@@ -23,6 +23,8 @@ Making more properties nullable</PackageReleaseNotes>
   </PropertyGroup>
     <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <LangVersion>8.0</LangVersion>
+    <TreatWarningsAsErrors>false</TreatWarningsAsErrors>
+    <WarningsAsErrors />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <LangVersion>8.0</LangVersion>
